--- a/src/views/layouts/main.handlebars
+++ b/src/views/layouts/main.handlebars
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Productos</title>
+  <link rel="stylesheet" href="/css/style.css" />
   <script src="/socket.io/socket.io.js"></script>
 </head>
 <body>
